[package]
name = "tula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.4.0", features = ["auto-color"] }
clap = { version = "4.5.4", features = ["derive"] }
chumsky = { path = "../chumsky", features = ["label"] }
